create basic structure

--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "cinemate",
+  "name": "MovieVerse",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tailwindcss/cli": "^4.0.6",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^13.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^4.0.6",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "npx @tailwindcss/cli -i ./src/index.css -o ./src/tailwind.output.css --watch"
   },
   "eslintConfig": {
     "extends": [
