--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "npx @tailwindcss/cli -i ./src/index.css -o ./src/tailwind.output.css --watch"
+    "dev": "npx @tailwindcss/cli -i ./src/input.css -o ./src/tailwind.output.css --watch"
   },
   "eslintConfig": {
     "extends": [
